# computational-physics-hw

./: README.md  pyproject.toml
src/compute_physics/: __init__.py  __main__.py
src/compute_physics/matrix/: __init__.py  algorithm.py
tests/matrix/: log.txt  test_problem.py
